[project]
name = "mu-mcp"
version = "0.1.0"
description = "MCP server for mu email search"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
mu-mcp = "mu_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.14"
